[gd_scene load_steps=79 format=3 uid="uid://xa0sifmfniyq"]

[ext_resource type="Texture2D" uid="uid://b350h8mn38dvt" path="res://assets/Adventure_Character_Simple.png" id="1_wkh4x"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_yq2yk"]
[ext_resource type="PackedScene" uid="uid://b1tqh21lid516" path="res://scenes/UIs/game_ui.tscn" id="3_jvsak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dtvu5"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa267"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dq7j"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q844v"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 576, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj2te"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ebjf"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewjc2"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kfha"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2q2r"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxs4m"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrmfg"]
atlas = ExtResource("1_wkh4x")
region = Rect2(288, 912, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl8rm"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij2fp"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgi74"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y37ju"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex6il"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sms0j"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vopi"]
atlas = ExtResource("1_wkh4x")
region = Rect2(288, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s4nm"]
atlas = ExtResource("1_wkh4x")
region = Rect2(336, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk0tv"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 864, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_attc5"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 864, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aq4f"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 864, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdjjg"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 864, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5k4v"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptmkk"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffvmj"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ei1"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnoh0"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcv8o"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7na1k"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfib1"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7ukh"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l1l5"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2to7"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxon1"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kelvu"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rklsr"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb7l2"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvt2l"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_so28q"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb30g"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w4hv"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3644u"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrx5"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8m1"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxk6l"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsbts"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqg43"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qparx"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy4wx"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kfvc"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1xny"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaoh8"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc5dv"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp8df"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5pee"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbro0"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf5n5"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds2b7"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gw8g"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcvs1"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g75k"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dylgb"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a0fu"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv3rd"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_etc1w"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuucr"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifg3r"]
atlas = ExtResource("1_wkh4x")
region = Rect2(288, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xms8t"]
atlas = ExtResource("1_wkh4x")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_diqu2"]
atlas = ExtResource("1_wkh4x")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c1hj"]
atlas = ExtResource("1_wkh4x")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fao1j"]
atlas = ExtResource("1_wkh4x")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6b6p"]
atlas = ExtResource("1_wkh4x")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sg81"]
atlas = ExtResource("1_wkh4x")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ruu0c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtvu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa267")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dq7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q844v")
}],
"loop": true,
"name": &"ArrowShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj2te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ebjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewjc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kfha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2q2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxs4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrmfg")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl8rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij2fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgi74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y37ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex6il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sms0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vopi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s4nm")
}],
"loop": false,
"name": &"FireballShoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk0tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aq4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdjjg")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5k4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptmkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffvmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ei1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnoh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcv8o")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7na1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfib1")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7ukh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l1l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2to7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxon1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kelvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rklsr")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb7l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvt2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so28q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb30g")
}],
"loop": true,
"name": &"Run2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w4hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3644u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxk6l")
}],
"loop": false,
"name": &"SwordSwing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsbts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqg43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qparx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy4wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kfvc")
}],
"loop": false,
"name": &"SwordSwing2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1xny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaoh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc5dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp8df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5pee")
}],
"loop": false,
"name": &"SwordSwing3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbro0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf5n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds2b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gw8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcvs1")
}],
"loop": false,
"name": &"SwordSwing4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g75k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dylgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a0fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv3rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etc1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuucr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifg3r")
}],
"loop": false,
"name": &"SwordThrust",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xms8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diqu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c1hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fao1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6b6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sg81")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 2
script = ExtResource("1_yq2yk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ruu0c")
animation = &"Jump"
autoplay = "Idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-6, -9, 3, -9, 5, -7, 5, 2, 6, 2, 6, 3, 5, 5, 3, 6, 4, 7, 4, 8, -5, 8, -6, 7, -8, 7, -9, 6, -9, 4, -8, 3, -8, -7)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUi" parent="CanvasLayer" instance=ExtResource("3_jvsak")]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
